--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "eleventy --serve",
-    "build": "eleventy"
+    "build": "eleventy",
+    "test": "jest"
   },
   "devDependencies": {
-    "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0"
+    "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
+    "jest": "^27.2.0"
   },
   "author": "Henry",
   "license": "ISC",
@@ -27,5 +29,14 @@
     "markdown-it": "^12.3.2",
     "markdown-it-anchor": "^8.4.1",
     "markdown-it-highlightjs": "^3.6.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Wizzaisha/Soy-Henry-M1-repo.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/Wizzaisha/Soy-Henry-M1-repo/issues"
+  },
+  "homepage": "https://github.com/Wizzaisha/Soy-Henry-M1-repo#readme"
 }
